# dotcherry-cli

./: .env.example  Cargo.toml  README.md
src/: cli_args.rs  database.rs  file_watcher.rs  main.rs
