[package]
name = "dotcherry-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
graphviz-rust = "0.2.1"
clap = { version = "3.2.17", features = ["derive"] }
postgrest = "1.3.1"
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
dotenv-build = "0.1"
